--- a/app/src/main/res/layout/change_profile_info_fragment.xml
+++ b/app/src/main/res/layout/change_profile_info_fragment.xml
@@ -50,6 +50,7 @@
         app:layout_constraintTop_toBottomOf="@id/text_profile"
         app:layout_constraintStart_toEndOf="@id/person_icon"
         tools:text="(+992) 935012824"
+        android:id="@+id/phone"
         android:layout_marginStart="8dp"
         android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@id/change_name"/>
@@ -57,40 +58,37 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/change_name"
+        android:background="@drawable/round_shape"
+        android:textSize="22sp"
+        android:paddingStart="8dp"
+        android:layout_marginHorizontal="16dp"
         android:layout_marginTop="16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/person_icon"
         android:hint="@string/name"/>
+
     <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/change_name"
-        android:id="@+id/change_surname"
-        android:layout_marginTop="16dp"
-        android:hint="@string/surname"
-        />
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/birth_fixed"
-        android:inputType="none"
-        tools:text="28.09.1998"
-        android:visibility="gone"
-        tools:visibility="visible"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/change_surname"/>
-    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="50dp"
-        app:layout_constraintTop_toBottomOf="@id/change_surname"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="16dp"
+        android:inputType="none"
+        android:visibility="gone"
+        android:layout_marginTop="48dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/change_name"
+        tools:text="28.09.1998"
+        tools:visibility="visible" />
+
+    <Button
         android:id="@+id/change_birth"
-        android:text="@string/change_birth"/>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="48dp"
+        android:layout_marginStart="16dp"
+        android:text="@string/change_birth"
+        app:layout_constraintStart_toEndOf="@id/birth_fixed"
+        app:layout_constraintTop_toBottomOf="@+id/change_name" />
 
     <Button
         android:layout_width="wrap_content"
