--- a/app/src/main/res/layout/history_bs_layout.xml
+++ b/app/src/main/res/layout/history_bs_layout.xml
@@ -96,7 +96,7 @@
                 android:textSize="20sp"
                 android:textColor="@color/black"
                 android:textStyle="bold"
-                tools:text="Receiver: +992 935012824"
+                tools:text="@string/receiverTransaction"
                 android:id="@+id/transaction_receiver_bs"
                 />
             <TextView
@@ -121,7 +121,7 @@
                 android:textStyle="bold"
                 android:layout_marginTop="24dp"
                 android:textSize="20sp"
-                tools:text="Payment method: E-wallet"
+                tools:text="@string/payment_method"
                 android:textColor="@color/black"/>
             <TextView
                 android:layout_width="wrap_content"
