--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -20,6 +20,7 @@
         android:textColor="@color/black"
         android:textStyle="bold"
         android:textSize="32sp"
+        android:id="@+id/signInText"
         app:layout_constraintTop_toBottomOf="@id/wave"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginStart="16dp"/>
@@ -27,11 +28,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="32dp"
+        app:layout_constraintTop_toBottomOf="@id/signInText"
         android:textSize="16sp"
         android:layout_marginBottom="16dp"
         android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/login_editText"
         app:layout_constraintStart_toStartOf="parent"
+        android:id="@+id/logInText"
         android:text="@string/login"/>
 
     <EditText
@@ -42,10 +46,10 @@
         android:background="@drawable/round_shape"
         android:drawableStart="@drawable/ic_person"
         android:hint="@string/login"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/logInText"
         app:layout_constraintVertical_bias="0.292" />
 
     <TextView
@@ -65,6 +69,7 @@
         android:layout_marginHorizontal="8dp"
         android:id="@+id/password"
         android:hint="@string/password"
+        android:inputType="textPassword"
         android:background="@drawable/round_shape"
         android:drawableStart="@drawable/ic_lock"
         android:layout_marginTop="40dp"
