--- a/app/src/main/res/layout/main_menu_fragment.xml
+++ b/app/src/main/res/layout/main_menu_fragment.xml
@@ -18,6 +18,8 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             android:id="@+id/text_balance"
+            android:paddingEnd="32dp"
+            android:textStyle="bold"
             android:textColor="@color/black"
             android:textSize="16sp"
             android:layout_marginTop="8dp"
@@ -61,10 +63,9 @@
             android:layout_height="wrap_content"
             android:background="@drawable/ic_add"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toEndOf="@id/balance"
+            app:layout_constraintStart_toEndOf="@id/text_balance"
             android:id="@+id/add_balance"
-            android:layout_marginTop="16dp"
-            android:layout_marginStart="16dp"/>
+            android:layout_marginTop="16dp"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
@@ -74,6 +75,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/top_layout">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
@@ -111,7 +118,7 @@
                 <ImageButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_wallet"
+                    android:src="@drawable/ic_button_wallet"
                     android:id="@+id/transaction_button"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -130,7 +137,7 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/add_card"
                     android:src="@drawable/ic_add_card"
-                    app:layout_constraintStart_toEndOf="@id/transaction_button"
+                    app:layout_constraintStart_toEndOf="@id/transaction_text"
                     android:layout_marginStart="32dp"
                     app:layout_constraintTop_toTopOf="parent"
                     android:background="?attr/selectableItemBackground"/>
@@ -146,7 +153,7 @@
                 <ImageButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:layout_constraintStart_toEndOf="@id/add_card"
+                    app:layout_constraintStart_toEndOf="@id/addcard_text"
                     android:id="@+id/qr_button"
                     android:background="@drawable/ic_qr"
                     android:layout_marginStart="32dp"
@@ -195,17 +202,22 @@
                 android:textSize="24dp"
                 android:textColor="@color/black"
                 android:text="@string/history"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
             <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/history_rv"
                 android:background="@drawable/round_shape"
                 tool:listitem="@layout/history_rv"
+                android:orientation="vertical"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginTop="16dp"
                 app:layout_constraintTop_toBottomOf="@+id/history_text"/>
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 
 
