--- a/app/src/main/res/layout/settings_fragment.xml
+++ b/app/src/main/res/layout/settings_fragment.xml
@@ -215,7 +215,7 @@
                     />
                 <TextView
                     android:layout_width="wrap_content"
-                    tool:text="@string/help"
+                    android:text="@string/help"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     android:drawableEnd="@drawable/ic_next"
