--- a/app/src/main/res/layout/settings_fragment.xml
+++ b/app/src/main/res/layout/settings_fragment.xml
@@ -142,7 +142,7 @@
                     />
                 <TextView
                     android:layout_width="wrap_content"
-                    android:text="English"
+                    android:text="Русский"
                     android:id="@+id/settings_language"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
